# lz

./: .env.example  .gitignore  docker-compose.yml
lz/: Cargo.toml  README.md  conf.json
lz/src/: agent.rs  envelope.rs  ident.rs  main.rs
lz/src/meili/: api.rs
lz/src/strapi/: api.rs  ident.rs  mod.rs
strapi/: package-lock.json  package.json
strapi/config/: plugins.js
strapi/src/api/article/content-types/article/: schema.json
