[package]
name = "lz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.3.1"
meilisearch-sdk = "0.22.1"
futures = "0.3"
toml = "0.4"
home = "0.5.4"
